# docs/api/swagger.yml
@@ -23,6 +23,7 @@ paths:
                   type: number
       responses:
         '201':
+          description: created
           content:
             application/json:
               schema:
@@ -122,7 +123,7 @@ paths:
               schema:
                 items:
                   $ref: '#/components/schemas/Category'
-  /store:
+  /market/store:
     post:
       description: Crea una tienda
       tags:
@@ -131,7 +132,10 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Store'
+              type: object
+              properties:
+                name:
+                  type: string
       responses:
         '201':
           description: created
@@ -139,7 +143,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Store'
-  '/store/{id}':
+  '/market/store/{id}':
     put:
       description: Actualiza una tienda
       tags:
